modif head (phylotree.css > pylotree.css.tmp)

--- a/phylogene_app/templates/Entropy.html
+++ b/phylogene_app/templates/Entropy.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
 <title>Enthropie</title>
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/phylotree.css"> 
+<link rel="stylesheet" href="../static/css/phylotree.css">
 {% endblock %}
 <style>
 	h1 {
@@ -46,14 +46,14 @@
 		  </form> -->
 		</div>
 	  </nav>
-	</br>
+	</body>
 
 <div class="container-fluid" style="background-color: #a6aaa9;" >
 
  <div id="myDiv1">
  </div>
 
-
+</div>
 {%block javascripts %}
 
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
