--- a/phylogene_app/templates/heatmap.html
+++ b/phylogene_app/templates/heatmap.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
 <title>Heatmap</title>
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/phylotree.css"> 
+<link rel="stylesheet" href="../static/css/phylotree.css">
 {% endblock %}
 <style>
 	h1 {
@@ -47,7 +47,7 @@
 		</div>
 	  </nav>
 
-    </br>
+    </body>
 
     <div id="myDiv">
     </div>
