--- a/phylogene_app/templates/upgma2.html
+++ b/phylogene_app/templates/upgma2.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 {{block.super}}
-<link rel="stylesheet" href="{% static 'css/phylotree.css' %}">
+<link rel="stylesheet" href="{% static 'css/phylotree.css.tmp' %}">
 {% endblock %}
 
 {% block content %}
