--- a/phylogene_app/templates/boxplot.html
+++ b/phylogene_app/templates/boxplot.html
@@ -7,13 +7,19 @@
 <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
 <title>Boxplot</title>
 <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-<link rel="stylesheet" href="../static/css/phylotree.css"> 
+<link rel="stylesheet" href="../static/css/phylotree.css">
 {% endblock %}
 <style>
 	h1 {
 	  text-align: center;
 	}
-</style>	
+
+    #myDiv
+    {
+        background-color: #ffffff;
+    }
+</style>
+
 
 </head>
 
@@ -46,21 +52,13 @@
 		  </form> -->
 		</div>
 	  </nav>
-	</br>
+	</body>
 
 <div class="container-fluid" style="background-color: #a6aaa9;" >
 
-
 <div id="myDiv">
  </div>
-<style>
-#myDiv
-{
-        background-color: #ffffff;
-}
-</style>
-
-
+</div>
 
 {%block javascripts %}
 
