modification pour la navigation via la navbar + modification kruskal > Minimun Spanning Tree

--- a/phylogene_app/templates/kruskal.html
+++ b/phylogene_app/templates/kruskal.html
@@ -5,7 +5,7 @@
   {% block head %}
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <link rel="shortcut icon" href="../static/img/karubionet2favicon.png" />
-  <title>Kruskal</title>
+  <title>Minimun Spanning Tree</title>
   {% endblock %}
 </head> 
 
@@ -20,7 +20,7 @@
 
 
 <div class="container-fluid" style="background-color: #a6aaa9;" >
-  <h1 style="text-align: center;" >Kruskal</h1>
+  <h1 style="text-align: center;" >Minimun Spanning Tree</h1>
     <div class="col-lg-12" style="float:none;margin:auto;background-color: #ffffff;">
     
       <div id="graph"></div>
